# netshaper

./: .gitignore  .gitmodules  CMakeLists.txt  ProxyListener.h  README.md  build.sh  example_peer_1.cpp  example_peer_1_shaped.cpp  example_peer_1_unshaped.cpp  example_peer_2.cpp  example_peer_2_shaped.cpp  example_peer_2_unshaped.cpp  helpers.cpp  helpers.h  install_fstack.sh  setup.sh  test.sh
.github/workflows/: cmake.yml  setup.sh
ShapedTransciever/: CMakeLists.txt  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  example.cpp  main.cpp
UnshapedTransciever/: CMakeLists.txt  ProxyListener.cpp  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  example.cpp  main.cpp
dataset/: README.md
dev/: Dockerfile
docs/: README.md
evaluation/classifier/: README.md
evaluation/classifier/configs/: empirical_privacy.json
evaluation/microbenchmarks/: README.md  run.sh
evaluation/microbenchmarks/configs/: microbenchmarks_large_requests.json  microbenchmarks_small_requests.json
evaluation/microbenchmarks/helpers/: plot_data.py  process_data.py  run_testbed.sh  set_params.py
evaluation/privacy/: README.md  run.sh
evaluation/privacy/configs/: privacy_loss_vs_noise_std.json  privacy_loss_vs_query_num.json
evaluation/related/: README.md
evaluation/related/configs/: overhead_comparison_video.json  overhead_comparison_web.json
evaluation/video/: README.md  run.sh
evaluation/videoLatency/: README.md
evaluation/video_bandwidth/: README.md
evaluation/video_latency/: README.md  run.sh  set_params.sh
evaluation/web/: README.md  run.sh
evaluation/webBandwidth/: test.py
evaluation/web_bandwidth/: README.md
evaluation/web_latency/: README.md  run.sh
hardware/: CMakeLists.txt  README.md  configuation.md  test.sh
hardware/client/: entrypoint.sh  run.sh  setup.sh
hardware/client-middlebox/: CMakeLists.txt  run.sh  setup.sh
hardware/client_doca_middlebox/: .build.sh.swp  .setup.sh.swp  CMakeLists.txt  build.sh  peer1_config.json  setup.sh
hardware/client_middlebox/: CMakeLists.txt  build.sh  peer1_config.json  run.sh
hardware/server/: README.md  README_old.md  docker-compose.yml  nginx.conf  setup.sh
hardware/server-middlebox/: CMakeLists.txt  build.sh  run.sh
hardware/server_middlebox/: 5e  CMakeLists.txt  build.sh  peer2_config.json  run.sh  setup.sh
hardware/slow_server/: CMakeLists.txt
hardware/src/doca_peer1/: .main2.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  UnshapedServer.h  cmake_install.cmake  dpdk_utils.c  dpdk_utils.h  main.c  main.cpp  offload_rules.c  offload_rules.h
hardware/src/example/: README.md
hardware/test_client/: CMakeLists.txt
hardware/video-client/: Dockerfile  video-client.py
hardware/video_client/: Dockerfile  entrypoint.sh  run.sh  setup.sh
hardware/web-client/: multiple_urls.lua  run.sh  setup.sh
hardware/web_client/: Dockerfile  build.sh  entrypoint.sh  run.sh  setup.sh
lamport_queue/: README.md
lamport_queue/queue/: CMakeLists.txt  lamport_queue.h
lamport_queue/test_queue/: Makefile  consumer.c  initializer  producer.c  test.sh
shaper/: CMakeLists.txt  NoiseGenerator.h  gaussian.h
simulator/: DP_transport_dynamic.py  DP_transport_static.py  DP_transport_wPrivacy.py  README.md  configlib.py  experiment.py  main.py  plotting.ipynb  requirements.txt  simulator.py  test.py
simulator/analysis/: latency.py  neighboring_queue.py  overhead.py  privacy.py  utils.py
simulator/configs/: BandB_vs_TCN_DP.json  BandB_vs_TCN_baseline.json  DPlog_analysis.json  dp_interval_vs_overhead_video.json  dp_interval_vs_overhead_web.json  global_eps_VS_attacker_acc.json  global_eps_VS_overhead.json  global_eps_vs_attacker_acc.json  global_eps_vs_overhead.json  latency_analysis.json  neighboring_analysis.json  neighboring_analysis_video.json  neighboring_analysis_web.json  noise_multiplier_vs_overhead.json  noise_multiplier_vs_overhead_video.json  noise_multiplier_vs_overhead_web.json  noise_multiplier_vs_privacy.json  noise_multiplier_vs_privacy_video.json  noise_multiplier_vs_privacy_web.json  number_of_traces_vs_overhead.json  number_of_traces_vs_overhead_analysis.json  number_of_traces_vs_overhead_video.json  number_of_traces_vs_overhead_web.json  overhead_analysis.json  privacy_analysis.json  privacy_loss_VS_attacker_acc.json  privacy_loss_VS_overhead.json  privacy_loss_vs_overhead.json  test.json
simulator/data_utils/: data_loader.py
simulator/experiments/: BandB_vs_TCN.py  dp_interval_vs_overhead_video.py  dp_interval_vs_overhead_web.py  empirical_privacy.py  neighboring_analysis.py  neighboring_analysis_web_video.py  noise_multiplier_vs_overhead.py  noise_multiplier_vs_overhead_video.py  noise_multiplier_vs_overhead_web.py  noise_multiplier_vs_privacy.py  noise_multiplier_vs_privacy_video.py  number_of_traces_vs_overhead.py  number_of_traces_vs_overhead_video.py  number_of_traces_vs_overhead_web.py  overhead_video.py  overhead_web.py  privacy_loss_vs_attacker_acc.py  privacy_loss_vs_overhead.py  privacy_microbenchmarks.py  utils.py
simulator/modules/: Application.py  Queue.py  fpa.py
simulator/src/: DP_transport_dynamic.py  DP_transport_static.py  DP_transport_wPrivacy.py  transport.py
simulator/utils/: DP_utils.py  overhead_utils.py  queue_utils.py
src/Example/: README.md
src/Modules/: Common.h
src/example/: README.md
src/modules/: Common.h  PerfEval.h  README.md
(+212 files in other folders)
